...
                            </containerView>
                            <stackView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="1000" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="JbU-62-13k">
                                <rect key="frame" x="20" y="15" width="335" height="30"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="1000" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="17" adjustsLetterSpacingToFitWidth="YES" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="e0R-RM-Whk">
                                        <rect key="frame" x="0.0" y="0.0" width="277" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="GameViewController.TurnLabel"/>
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g3q-lj-0mf">
                                        <rect key="frame" x="285" y="0.0" width="50" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="GameViewController.RestartButton"/>
                                        <state key="normal" title="Restart"/>
                                        <connections>
                                            <action selector="restartGame:" destination="BYZ-38-t0r" eventType="touchUpInside" id="c3U-0D-f14"/>
                                        </connections>
                                    </button>
                                </subviews>
...
